--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,10 @@
 <html>
-	<head>
-		<title>{{ title }} - microblog </title>
-	</head>
-	<body>
-		<h1>Hello, {{ user.nickname }}!</h1>
-	</body>
+    <head>
+        {% if title %}
+        <title>{{ title}} - microblog</title>
+        {% endif %}
+    </head>
+    <body>
+        <h1>Hello, {{ user.nickname }}!</h1>
+    </body>
 </html>
