--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,9 +2,14 @@
     <head>
         {% if title %}
         <title>{{ title}} - microblog</title>
+        {% else %}
+        <title> Welcome to microblog</title>
         {% endif %}
     </head>
     <body>
-        <h1>Hello, {{ user.nickname }}!</h1>
+        <h1>Hi, {{ user.nickname }}!</h1>
+        {% for posts in posts %}
+        <div><p>{{ posts.author.nickname }} says: <b>{{ posts.body }}</b></p></div>
+        {% endfor %}
     </body>
 </html>
