Web Forms - My First Form

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,4 +4,4 @@
     {% for post in posts %}
     <div><p>{{ post.author.nickname }}says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
-{% endblock %}
+{% endforblock %}
